# 4d_viewer

./: Cargo.toml  README.md
shaders/: base.frag  base.vert  clipping.frag  clipping.vert  common.glsl  main.frag  main.vert  mat5.glsl  objects.glsl  ray_poses_dirs.glsl  raymarch4d.glsl
src/: main.rs  mesh.rs  objects.rs  shader.rs  transform4d.rs  util.rs
