[package]
name = "camera4d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
obj-rs = "0.7.1"
shader_loader = { git = "https://github.com/USSURATONCACHI/shader_loader.git" }
